--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -6,14 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="covregeCard.css">
     <link rel="stylesheet" href="covrege.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="covregeCard.css">
+
+
 
     <style>
         main {
@@ -78,11 +80,11 @@
                 <input type="text" id="covregeName" name="folder" required>
             </div>
 
-            <div>
-                <label for="details">Convrege Details</label>
-                <br>
-                <input type="text" id="details" name="details" required>
-            </div>
+
+            <label for="imagesFiles">Add Images</label>
+            <br>
+            <input type="file" id="imagesFiles" name="images" required>
+
 
             <button type="submit">Submit</button>
         </form>
@@ -91,36 +93,35 @@
 
     <main>
         <section class="cardsContainer">
-            <div>
-                <h1>Coverages</h1>
-                <div class="coverageCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
+            <h1>Coverages</h1>
+                <div class="cont ">
+                    <div class="coverageCard ">
+                        <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                        <p class="cardTitle">Ceremony honoring club presidents</p>
+                        <P class="cardDate">2023/12/4</P>
+                    </div>
+                    <div class="coverageCard ">
+                        <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                        <p class="cardTitle">Ceremony honoring club presidents</p>
+                        <P class="cardDate">2023/12/4</P>
+                    </div>
+                    <div class="coverageCard ">
+                        <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                        <p class="cardTitle">Ceremony honoring club presidents</p>
+                        <P class="cardDate">2023/12/4</P>
+                    </div>
+                    <div class="coverageCard ">
+                        <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                        <p class="cardTitle">Ceremony honoring club presidents</p>
+                        <P class="cardDate">2023/12/4</P>
+                    </div>
+                    <div class="coverageCard ">
+                        <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                        <p class="cardTitle">Ceremony honoring club presidents</p>
+                        <P class="cardDate">2023/12/4</P>
+                    </div>
+                
                 </div>
-                <div class="coverageCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
-                </div>
-                <div class="coverageCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
-                </div>
-                <div class="coverageCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
-                </div>
-                <div class="coverageCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
-                </div>
-
-            </div>
-
 
             <!-- <div class="coverageCard">
                     <img src="<%# imagePath %>" alt="">
@@ -150,7 +151,7 @@
                     submiter.style.display = "block";
                 });
 
-                x_icon.addEventListener('click', function() {
+                x_icon.addEventListener('click', function () {
                     submiter.style.display = "none";
                 })
 
