--- a/SWE363 Project/css/covregeCard.css
+++ b/SWE363 Project/css/covregeCard.css
@@ -5,7 +5,7 @@
 
 .cardsContainer > div {
     padding: 10px;
-    background-color: #1e1e1e;
+    background-color: #141414;
     border-radius: 15px;
     display: flex;
     flex-direction: row;
