--- a/views/events.ejs
+++ b/views/events.ejs
@@ -3,10 +3,10 @@
 
 <head>
 
-    <%- include('head')  %>
-    <link rel="stylesheet" href="eventCard.css">
-    <link rel="stylesheet" href="covregeCard.css">
-    <title>Events</title>
+    <%- include('head') %>
+        <link rel="stylesheet" href="eventCard.css">
+        <link rel="stylesheet" href="covregeCard.css">
+        <title>Events</title>
 </head>
 
 <body>
@@ -16,59 +16,60 @@
 
     </header>
 
-        <main>
-            <section class="cardsContainer">
-                <div>
-                    <h1>Coverages</h1>
+    <main>
+        <section class="cardsContainer">
+            <h1>Events</h1>
 
-                    <div class="eventCard">
-                        <div class="titlePar">
-                            <span class="cardTitle">Portrait photography</span>
-                            <button type="button" class="btn btn-outline-light btn-sm registerButton">Register</button>
+            <div>
 
-                            <!-- <div class="registerButton"> <span>register</span></div> -->
-                        </div>
-    
-                        <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
-                            Don’t miss this chance <br>
-                            Note: “your attend count with non academic activities“
-                        </p>
-    
-                        <div class="cardDetails">
-                            <span>Date: 7/10/2023</span>
-                            <span>Time: 7:30 PM</span>
-                            <span>Location: Building 19 - 210</span>
-                        </div>
+                <div class="eventCard">
+                    <div class="titlePar">
+                        <span class="cardTitle">Portrait photography</span>
+                        <button type="button" class="btn btn-outline-light btn-sm registerButton">Register</button>
+
+                        <!-- <div class="registerButton"> <span>register</span></div> -->
                     </div>
 
-                    <div class="eventCard">
-                        <div class="titlePar">
-                            <span class="cardTitle">Portrait photography</span>
-                            <button type="button" class="btn btn-outline-light btn-sm registerButton">Register</button>
-                        </div>
-    
-                        <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
-                            Don’t miss this chance <br>
-                            Note: “your attend count with non academic activities“
-                        </p>
-    
-                        <div class="cardDetails">
-                            <span>Date: 7/10/2023</span>
-                            <span>Time: 7:30 PM</span>
-                            <span>Location: Building 19 - 210</span>
-                        </div>
-                    </div>
-        
-                    
+                    <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
+                        Don’t miss this chance <br>
+                        Note: “your attend count with non academic activities“
+                    </p>
 
+                    <div class="cardDetails">
+                        <span>Date: 7/10/2023</span>
+                        <span>Time: 7:30 PM</span>
+                        <span>Location: Building 19 - 210</span>
+                    </div>
+                </div>
+
+                <div class="eventCard">
+                    <div class="titlePar">
+                        <span class="cardTitle">Portrait photography</span>
+                        <button type="button" class="btn btn-outline-light btn-sm registerButton">Register</button>
+                    </div>
+
+                    <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
+                        Don’t miss this chance <br>
+                        Note: “your attend count with non academic activities“
+                    </p>
+
+                    <div class="cardDetails">
+                        <span>Date: 7/10/2023</span>
+                        <span>Time: 7:30 PM</span>
+                        <span>Location: Building 19 - 210</span>
+                    </div>
                 </div>
 
 
 
+            </div>
 
 
 
-                <!-- <div class="coverageCard">
+
+
+
+            <!-- <div class="coverageCard">
                     <img src="<%# imagePath %>" alt="">
                     <p class="cardTitle">
                         <%# ceremonyTitle %>
@@ -77,8 +78,8 @@
                         <%# ceremonyDate %>
                     </p>
                 </div> -->
-            </section>
-        </main>
+        </section>
+    </main>
 
 </body>
 
