--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -192,25 +192,38 @@ main {
 }
 
 @media (min-width: 768px) {
+    header {
+        padding-top: 20px;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+    
+    header .line {
+        display: inline-flex;
+        width: 0;
+        width: fit-content;
+    }
+    
     #menuIcon {
         display: none;    
     }
         
     .menu {
-        display: flex;
+        display: inline-flex;
         flex-direction: row;
         justify-content:flex-start;
-        align-items: center;
+        align-items: flex-start;
         color: #E8E8E8;
         z-index: 1;
         gap: 55px;
-        width: 100%;
         position: relative;
         background-color: #222222;
         opacity: 1;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         transform: translateX(0);
         padding: 5px;
+        margin-left: 100px;
+        margin-top: 20px;
     }
 
     .menu .bi {
