--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -91,8 +91,9 @@
     <main>
         <section class="cardsContainer">
             <h1>Coverages</h1>
+            <% console.log(folders) %>
+
             <% folders.forEach(function(folder) { %>
-                <% console.log(folder) %>
                 <div class="cont">
                   <div class="coverageCard">
                     <% console.log(files) %>
