--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,7 +24,7 @@
     <a href="Login">Sign in</a>
     <% } %>
     <a href="/">Home</a>
-    <a href="covreges">covreges</a>
+    <a href="coverages">coverages</a>
     <a href="events">Events</a>
     <a href="#">About Photo Club</a>
     <% if (userRole=="visitor") { %>
