enhancement for the header

--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -202,6 +202,9 @@ main {
         display: inline-flex;
         width: 0;
         width: fit-content;
+        border-right: 2px solid white;
+        padding-right: 2.9rem;
+        margin-bottom: 7px;
     }
     
     #menuIcon {
@@ -249,7 +252,9 @@ main {
     
   }
 
-
+.menu a:nth-child(3) {
+    order: 9; /* Set the third child to the end of the .menu */
+}
 
 .menu a:nth-child(3):hover {
     border-top-color: #a23a39; /* Change the border-top color on hover for the second item */
