--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,6 +45,22 @@
                     <br>
                     <input type="password" id="password" name="password" required>
                 </div>
+
+                <% if (userRole == "admin") {  %>
+
+                <div>
+                    <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" checked>
+                    <label class="btn btn-secondary" for="option1">Club</label>
+                    
+                    <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
+                    <label class="btn btn-secondary" for="option2">Member</label>
+
+                    <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
+                    <label class="btn btn-secondary" for="option2">Admin</label>
+
+                </div>
+                <% } %>
+
                 
                 <button type="submit">Register</button>
             </form>
