--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.typekit.net/hky5sxh.css">
-		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
+
 		<link rel="stylesheet" type="text/css" href="base.css" />
         <link rel="stylesheet" href="style.css">
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
