--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./login.css">
     <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
 
@@ -49,22 +47,22 @@
                         </div>
 
                         <% if (userRole=="admin" ) { %>
-
-                            <div style="display: none;">
-                                <input type="radio" class="btn-check" name="role" id="option1" autocomplete="off" checked>
-                                <label class="btn btn-secondary" for="option1">Club</label>
-
-                                <input type="radio" class="btn-check" name="role" id="option2" autocomplete="off">
-                                <label class="btn btn-secondary" for="option2">Member</label>
-
-                                <input type="radio" class="btn-check" name="role" id="option3" autocomplete="off">
-                                <label class="btn btn-secondary" for="option3">Admin</label>
-
+                            <div>
+                              <input type="radio" class="btn-check" name="role" id="option1" value="club" autocomplete="off" checked>
+                              <label class="btn btn-secondary" for="option1">Club</label>
+                          
+                              <input type="radio" class="btn-check" name="role" id="option2" value="member" autocomplete="off">
+                              <label class="btn btn-secondary" for="option2">Member</label>
+                          
+                              <input type="radio" class="btn-check" name="role" id="option3" value="admin" autocomplete="off">
+                              <label class="btn btn-secondary" for="option3">Admin</label>
                             </div>
-                            <% } else { %>
-                                <input type="text" style="display: none;" name="role" value="visitor" autocomplete="off" >
-                            <% } %>
-                            <button type="submit" name="role">Register</button>
+                          <% } else { %>
+                            <!-- Note: No need to provide a name attribute if you're going to set the role to "visitor" in the backend -->
+                            <input type="hidden" name="role" value="visitor" autocomplete="off">
+                          <% } %>
+
+                          <button type="submit">Register</button>
 
                     </form>
                     <a href="/login">Login</a>
