fix event display

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -20,8 +20,7 @@
         <section class="cardsContainer">
             <h1>Events</h1>
 
-            <div>
-
+            <div class="cont">
                 <div class="eventCard">
                     <div class="titlePar">
                         <span class="cardTitle">Portrait photography</span>
