--- a/views/events.ejs
+++ b/views/events.ejs
@@ -21,26 +21,27 @@
             <h1>Events</h1>
 
             <div class="cont">
+                <% events.forEach(event => { %>
+                    
                 <div class="eventCard">
                     <div class="titlePar">
-                        <span class="cardTitle">Portrait photography</span>
+                        <span class="cardTitle"><%= event.title %></span>
                         <button type="button" class="btn btn-outline-light btn-sm registerButton">Register</button>
-
-                        <!-- <div class="registerButton"> <span>register</span></div> -->
                     </div>
-
-                    <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
-                        Don’t miss this chance <br>
-                        Note: “your attend count with non academic activities“
+            
+                    <p class="cardcontent">
+                        <%= event.description %><br>
                     </p>
-
+            
                     <div class="cardDetails">
-                        <span>Date: 7/10/2023</span>
-                        <span>Time: 7:30 PM</span>
-                        <span>Location: Building 19 - 210</span>
+                        <span>Date: <%= event.date %></span>
+                        <span>Time: <%= event.time %></span>
+                        <span>Location: <%= event.location %></span>
                     </div>
                 </div>
+               <%  }); %>
 
+            
                 <div class="eventCard">
                     <div class="titlePar">
                         <span class="cardTitle">Portrait photography</span>
@@ -68,15 +69,6 @@
 
 
 
-            <!-- <div class="coverageCard">
-                    <img src="<%# imagePath %>" alt="">
-                    <p class="cardTitle">
-                        <%# ceremonyTitle %>
-                    </p>
-                    <p class="cardDate">
-                        <%# ceremonyDate %>
-                    </p>
-                </div> -->
         </section>
     </main>
 
