--- a/SWE363 Project/css/covregeCard.css
+++ b/SWE363 Project/css/covregeCard.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .cardsContainer h1 {
