--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -24,7 +24,7 @@
 			<div class="intro"> 
 				<h1 class="intro__title"> 
 					<span class="intro__title-pre">Photo Club</span> 
-					<span class="intro__title-sub">Welcom To Photo Club</span> 
+					<span class="intro__title-sub">Welcome To Photo Club</span> 
 				</h1> 
 				<span class="intro__info">Scroll moderately to fully experience the animations</span> 
 			</div>
