--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -246,8 +246,8 @@ main {
     }
 
     main {
-        position: relative;
-        top: 60px;
+        position: fixed;
+        
     }
     
   }
