--- a/views/coverages.ejs
+++ b/views/coverages.ejs
@@ -94,7 +94,7 @@
             <div class="cont">
             <% folders.forEach(function(folder) { %>
                 <% if (folder != "searchTemp"){ %>
-                    <div class="coverageCard">
+                    <div class="coverageCard" style="margin: 0px 10px;">
                         <% let num = 1 %>
                         <% files.forEach(function(file) { %>
                             <% if (folder === file.folder && num != 2) { %>
