--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -246,7 +246,8 @@ main {
     }
 
     main {
-        position: fixed;
+        position: relative;
+        padding-top: 20px;
         
     }
     
