add acount update

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,7 +31,7 @@
     <% } %>
     <% if (userRole!="visitor") { %>
         <% if(userRole=="admin"){ %>
-        <a href="register">Add acconet</a>
+        <a href="register">Add account</a>
         <% } %>
     <form action="/logout" method="POST">
         <button type="submit" class="btn btn-outline-light">Logout</button>
